# nekobot2

./: .gitignore  README.md  implementation_plan.md  pyproject.toml  requirements.txt  spec.md
.github/instructions/: general-coding.instructions.md  markdown.instructions.md
.github/prompts/: getting-bot-started.prompt.md
docs/: trigger_matching_plan.md
nekobot2/: __init__.py  main.py
nekobot2/bot/: bot.py
nekobot2/cogs/: reactions.py
nekobot2/config/: config.yaml
nekobot2/services/: config_loader.py  image_api.py  trigger_matcher.py
nekobot2/tests/: test_trigger_matcher.py
