[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nekobot2"
version = "0.1.0"
authors = [
  { name="Joanna" },
]
description = "A Discord bot that sends anime reaction gifs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "discord.py>=2.0.0",
    "python-dotenv>=0.19.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0.0"
]
